--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,4 +1,6 @@
 @import 'setup';
+@import 'typography';
+@import 'headers';
 
 // styles for a 20-sided polygon
 // styles for the modifier drop-down
