--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -8,7 +8,11 @@ $h1Font:'Roboto Slab', serif;
 $baseFont:'Noto Sans', 'Helvetica,' sans-serif;
 
 //COLOURS
+
+//https://colorhunt.co/palette/147532
+
 $darkpurple: #2d132c;
 $raspberry: #801336;
 $red: #c72c41;
 $orange: #ee4540;
+$footergrey:  #9c9a9a;
