--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -5,7 +5,7 @@
 // font-family: 'Noto Sans', sans-serif;
 
 $h1Font:'Roboto Slab', serif;
-$baseFont:'Noto Sans', 'Helvetica,' sans-serif;
+$baseFont:'Noto Sans', sans-serif;
 
 //COLOURS
 
