--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -8,17 +8,27 @@
 
 
 //GENERAL STYLES
-*{
-    border: 2px solid green;
-}
+// *{
+//     border: 2px solid green;
+// }
 
 wrapper{
     width: 100%;
+    padding: 0;
+    margin: 0;
 }
 
 //HEADER STYLES
 h1{
     text-align: center;
+    background: ($darkpurple);
+    padding: 5%;
+    margin-top: 0;
+}
+
+header{
+    padding: 0;
+    margin: 0;
 }
 
 
@@ -30,8 +40,58 @@ footer{
     max-width: 100%;
 }
 
+body{
+    padding: 0;
+    margin: 0;
+}
+
+p.wtf{
+    text-align: center;
+}
+
+//DIE STYLES
+
+.d20 {
+    width: 100px;
+    height: 55px;
+    background: red;
+    position: relative;
+  }
+  .d20:before {
+    content: "";
+    position: absolute;
+    top: -25px;
+    left: 0;
+    width: 0;
+    height: 0;
+    border-left: 50px solid transparent;
+    border-right: 50px solid transparent;
+    border-bottom: 25px solid red;
+  }
+  .d20:after {
+    content: "";
+    position: absolute;
+    bottom: -25px;
+    left: 0;
+    width: 0;
+    height: 0;
+    border-left: 50px solid transparent;
+    border-right: 50px solid transparent;
+    border-top: 25px solid red;
+  }
+
+
 //FOOTER STYLES
 
 footer{
     text-align: center;
+    margin-bottom: 0;
 }
+
+footer p{
+    display: block;
+    background-color: ($darkpurple);
+}
+
+
+
