--- a/styles/style.css
+++ b/styles/style.css
@@ -193,6 +193,7 @@ h1 {
   text-transform: uppercase;
   font-size: 3rem;
   color: #9c9a9a;
+  letter-spacing: 0.2rem;
 }
 
 h2 {
@@ -275,7 +276,7 @@ p.wtf {
 
 footer {
   text-align: center;
-  margin-bottom: 0;
+  margin: 0;
 }
 
 footer p {
