--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -12,6 +12,10 @@
 //     border: 2px solid green;
 // }
 
+html{
+    padding: 0;
+}
+
 wrapper{
     width: 100%;
     padding: 0;
@@ -27,9 +31,15 @@ h1{
 }
 
 header{
-    padding: 0;
-    margin: 0;
+    margin-top: 0;
+    // padding-top: 0;
 }
+
+// header{
+//     padding: 0;
+//     margin: 0;
+//     // display: block;
+// }
 
 
 //BODY STYLES
@@ -51,33 +61,39 @@ p.wtf{
 
 //DIE STYLES
 
+.d20Wrapper{
+    display: flex;
+    align-content: center;
+    width: 100%;
+}
+
 .d20 {
-    width: 100px;
-    height: 55px;
+    width: 10rem;
+    height: 5.5rem;
     background: red;
     position: relative;
   }
   .d20:before {
     content: "";
     position: absolute;
-    top: -25px;
+    top: -2.5rem;
     left: 0;
     width: 0;
     height: 0;
-    border-left: 50px solid transparent;
-    border-right: 50px solid transparent;
-    border-bottom: 25px solid red;
+    border-left: 5rem solid transparent;
+    border-right: 5rem solid transparent;
+    border-bottom: 2.5rem solid red;
   }
   .d20:after {
     content: "";
     position: absolute;
-    bottom: -25px;
+    bottom: -2.5rem;
     left: 0;
     width: 0;
     height: 0;
-    border-left: 50px solid transparent;
-    border-right: 50px solid transparent;
-    border-top: 25px solid red;
+    border-left: 5rem solid transparent;
+    border-right: 5rem solid transparent;
+    border-top: 2.5rem solid red;
   }
 
 
