--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -108,7 +108,7 @@ p.wtf{
   }
 
   
-  .d20 {
+  .rotating{
     -webkit-animation: rotating 2s linear infinite;
     -moz-animation: rotating 2s linear infinite;
     -ms-animation: rotating 2s linear infinite;
