--- a/styles/style.css
+++ b/styles/style.css
@@ -288,7 +288,7 @@ p.wtf {
   }
 }
 
-.d20 {
+.rotating {
   -webkit-animation: rotating 2s linear infinite;
   animation: rotating 2s linear infinite;
 }
