added drop down menu

--- a/styles/sass/_typography.scss
+++ b/styles/sass/_typography.scss
@@ -31,6 +31,14 @@ p.wtf{
     font-weight: 100;
 }
 
+//BUTTON STYLES
+
+button{
+    font-family: ($baseFont);
+    background: ($raspberry);
+    color: ($footergrey);
+}
+
 
 //FOOTER FONT STYLES
 
