10:58 a.m. Friday commit- animation pause and run added

--- a/styles/sass/_animation.scss
+++ b/styles/sass/_animation.scss
@@ -35,3 +35,8 @@
     -o-animation: rotating 2s linear infinite;
     animation: rotating 2s linear infinite;
   }
+
+
+//   .not-rotating{
+//     animation-fill-mode: none;
+//   }
