4:37 p.m. Friday commit- colours added, link styling

--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -5,7 +5,7 @@
 // font-family: 'Noto Sans', sans-serif;
 
 $h1Font:'Roboto Slab', serif;
-$baseFont:'Noto Sans', sans-serif;
+$baseFont:'Montserrat', sans-serif;
 
 //COLOURS
 
@@ -15,4 +15,5 @@ $darkpurple: #2d132c;
 $raspberry: #801336;
 $red: #c72c41;
 $orange: #ee4540;
+$white: #e0e0e0;
 $footergrey:  #9c9a9a;
