--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -1,8 +1,10 @@
 //FONTS
 
-// ROBERTO SLAB (thin 100, bold 700, regular), NOTO SANS (regular)
+// ROBOTO SLAB (thin 100, bold 700, regular), Montserrat (regular)
 // font-family: 'Roboto Slab', serif;
-// font-family: 'Noto Sans', sans-serif;
+// font-family: 'Montserrat', sans-serif;
+
+
 
 $h1Font:'Roboto Slab', serif;
 $baseFont:'Montserrat', sans-serif;
@@ -17,3 +19,10 @@ $red: #c72c41;
 $orange: #ee4540;
 $white: #e0e0e0;
 $footergrey:  #9c9a9a;
+
+//https://www.instagram.com/p/BtD3VgfAaRA/
+
+$purple: #7E395C;
+$mustard: #FFBD46;
+$lightgrey: #F7ECDF;
+$turquoise: #76E2DC;
