--- a/styles/style.css
+++ b/styles/style.css
@@ -262,6 +262,22 @@ header {
   margin-top: 0;
 }
 
+main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -ms-flex-line-pack: center;
+      align-content: center;
+}
+
 .d20,
 .modifier,
 .finalScore
@@ -284,6 +300,13 @@ p.wtf {
   width: 10rem;
   height: 5.5rem;
   background: #9c9a9a;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  border: 2px solid green;
+}
+
+.d20Wrapper {
   position: relative;
 }
 
