--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -1,6 +1,7 @@
 @import 'setup';
 @import 'typography';
 @import 'animation';
+@import 'mixins';
 
 // styles for a 20-sided polygon
 // styles for the modifier drop-down
