5:54 p.m. Sunday commit- more media queries added, colour scheme changed

--- a/styles/sass/_mixins.scss
+++ b/styles/sass/_mixins.scss
@@ -2,3 +2,7 @@
 @mixin for-landscape-phone{
     @media(max-width: 610px){@content;}
 }
+
+@mixin for-small-phones{
+    @media(max-width: 320px){@content;}
+}
