--- a/styles/sass/_variables.scss
+++ b/styles/sass/_variables.scss
@@ -13,12 +13,12 @@ $baseFont:'Montserrat', sans-serif;
 
 //https://colorhunt.co/palette/147532
 
-$darkpurple: #2d132c;
-$raspberry: #801336;
-$red: #c72c41;
-$orange: #ee4540;
-$white: #e0e0e0;
-$footergrey:  #9c9a9a;
+// $darkpurple: #2d132c;
+// $raspberry: #801336;
+// $red: #c72c41;
+// $orange: #ee4540;
+// $white: #e0e0e0;
+// $footergrey:  #9c9a9a;
 
 //https://www.instagram.com/p/BtD3VgfAaRA/
 
