--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -75,11 +75,16 @@ p.wtf{
     text-align: center;
 }
 
+.clickPromptWrapper{
+    @include for-landscape-phones{
+        .clickPrompt{
+            margin-bottom: 10%;
+        }
+    }
+}
+
 .mainText{
     margin: 4% 0;
-    @include for-small-phones{
-        margin-top: 8%;
-    }
 }
 
 
@@ -96,12 +101,16 @@ p.wtf{
     @include for-small-phones{
         .d20{
             text-align: center;
+            margin-bottom: 20%;
         }
     }
 }
 
 .d20Wrapper{
     position: relative;
+    // @include for-small-phones{
+    //     margin-bottom: 20%;
+    // }
     // border: 2px solid orange;
 }
 
