--- a/styles/sass/style.scss
+++ b/styles/sass/style.scss
@@ -51,27 +51,19 @@ header{
 
 //BODY STYLES
 
-main{
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    // justify-content: space-between;
-    align-content: center;
-    padding: 2%;
-    // border: 2px solid orange;
-}
-
-// .mainText{
-//     display: flex;
-//     flex-wrap: wrap;
-//     flex-direction: column;
-// }
-
 .d20,
 .modifier,
 .finalScore
 footer{
     max-width: 100%;
+}
+
+main{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: space-between;
+    align-content: center;
 }
 
 body{
@@ -82,9 +74,13 @@ body{
     
 }
 
-p.clickPrompt{
-    margin-top: 10%;
+.clickPromptWrapper{
+    width: 100%;
 }
+
+// p.clickPrompt{
+//     margin-top: 10%;
+// }
 
 p.wtf{
     text-align: center;
@@ -92,55 +88,59 @@ p.wtf{
 }
 
 .mainText{
-    margin-top: 10%;
+    text-align: center;
 }
 
 
 //DIE STYLES
 
 
-.d20 {
-    width: 10rem;
-    height: 5.5rem;
-    background: ($lightgrey);
-    display: flex;
-    // border: 2px solid green;
-    margin: 10% 0;
-    @include for-small-phones{
-        .d20{
-            text-align: center;
-            // margin-bottom: 20%;
-        }
-    }
-}
-
 .d20Wrapper{
-    position: relative;
+    max-width: 80%;
+    margin: 0 auto;
+    @include for-small-phones{
+        max-width: 90%;
+    }
+        img{
+            max-width: 100%;
+        }
 }
 
-.d20:before {
-    content: "";
-    position: absolute;
-    top: -2.5rem;
-    left: 0;
-    width: 0;
-    height: 0;
-    border-left: 5rem solid transparent;
-    border-right: 5rem solid transparent;
-    border-bottom: 2.5rem solid ($lightgrey);
-}
 
-.d20:after {
-    content: "";
-    position: absolute;
-    bottom: -2.5rem;
-    left: 0;
-    width: 0;
-    height: 0;
-    border-left: 5rem solid transparent;
-    border-right: 5rem solid transparent;
-    border-top: 2.5rem solid ($lightgrey);
-}
+// div.rotating{
+//     // width: 10rem;
+//     // height: 5.5rem;
+//     display: flex;
+//     margin: 10% 0;
+// }
+
+// .d20Wrapper{
+//     position: relative;
+// }
+
+// .d20:before {
+//     content: "";
+//     position: absolute;
+//     top: -2.5rem;
+//     left: 0;
+//     width: 0;
+//     height: 0;
+//     border-left: 5rem solid transparent;
+//     border-right: 5rem solid transparent;
+//     // border-bottom: 2.5rem solid ($lightgrey);
+// }
+
+// .d20:after {
+//     content: "";
+//     position: absolute;
+//     bottom: -2.5rem;
+//     left: 0;
+//     width: 0;
+//     height: 0;
+//     border-left: 5rem solid transparent;
+//     border-right: 5rem solid transparent;
+//     // border-top: 2.5rem solid ($lightgrey);
+// }
 
 
 //FOOTER STYLES
