--- a/styles/style.css
+++ b/styles/style.css
@@ -280,6 +280,13 @@ header {
   margin-top: 0;
 }
 
+.d20,
+.modifier,
+.finalScore
+footer {
+  max-width: 100%;
+}
+
 main {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -290,16 +297,11 @@ main {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -ms-flex-line-pack: center;
       align-content: center;
-  padding: 2%;
-}
-
-.d20,
-.modifier,
-.finalScore
-footer {
-  max-width: 100%;
 }
 
 body {
@@ -309,8 +311,8 @@ body {
   color: black;
 }
 
-p.clickPrompt {
-  margin-top: 10%;
+.clickPromptWrapper {
+  width: 100%;
 }
 
 p.wtf {
@@ -319,51 +321,22 @@ p.wtf {
 }
 
 .mainText {
-  margin-top: 10%;
-}
-
-.d20 {
-  width: 10rem;
-  height: 5.5rem;
-  background: #F7ECDF;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin: 10% 0;
-}
-
-@media (max-width: 320px) {
-  .d20 .d20 {
-    text-align: center;
-  }
+  text-align: center;
 }
 
 .d20Wrapper {
-  position: relative;
+  max-width: 80%;
+  margin: 0 auto;
 }
 
-.d20:before {
-  content: "";
-  position: absolute;
-  top: -2.5rem;
-  left: 0;
-  width: 0;
-  height: 0;
-  border-left: 5rem solid transparent;
-  border-right: 5rem solid transparent;
-  border-bottom: 2.5rem solid #F7ECDF;
+@media (max-width: 320px) {
+  .d20Wrapper {
+    max-width: 90%;
+  }
 }
 
-.d20:after {
-  content: "";
-  position: absolute;
-  bottom: -2.5rem;
-  left: 0;
-  width: 0;
-  height: 0;
-  border-left: 5rem solid transparent;
-  border-right: 5rem solid transparent;
-  border-top: 2.5rem solid #F7ECDF;
+.d20Wrapper img {
+  max-width: 100%;
 }
 
 footer {
