--- a/styles/style.css
+++ b/styles/style.css
@@ -320,6 +320,7 @@ p.finalRoll {
 p.wtf {
   text-align: center;
   margin-top: 0;
+  font-style: oblique;
 }
 
 a {
@@ -327,7 +328,7 @@ a {
   color: black;
 }
 
-a :hover {
+a:hover {
   background: #76E2DC;
 }
 
