--- a/styles/style.css
+++ b/styles/style.css
@@ -196,28 +196,25 @@ h1 {
   letter-spacing: 0.2rem;
 }
 
-@media (max-width: 610px) {
-  h1 .icon1 {
-    display: none;
-  }
-}
-
-h2 {
-  font-family: "Montserrat", sans-serif;
+main p {
+  font-size: 1.5rem;
 }
 
 p.wtf {
   font-weight: 100;
+  font-size: 1rem;
 }
 
 button {
   font-family: "Montserrat", sans-serif;
   color: #F7ECDF;
+  font-size: 1rem;
 }
 
 footer p {
   font-family: "Montserrat", sans-serif;
   color: black;
+  font-size: 0.8rem;
 }
 
 @-webkit-keyframes rotating {
@@ -257,6 +254,12 @@ h1 {
 @media (max-width: 320px) {
   h1 {
     padding-top: 5%;
+  }
+}
+
+@media (max-width: 610px) {
+  h1 .icon1 {
+    display: none;
   }
 }
 
